just more general information.  i'm going to write up more today.

--- a/docs/Report/Report.tex
+++ b/docs/Report/Report.tex
@@ -1,14 +1,30 @@
-\documentclass{article}
+\documentclass[11pt]{article}
+\usepackage{times}
 
-\title{...}
-\author{...}
-\date{...}
+\title{CMSC621 Project 1 Report}
+\author{Patrick Trinkle \& Mike Corbin\\
+Dept. of Computer Science and Electrical Engineering,\\
+University of Maryland Baltimore County,\\
+Baltimore, MD, 21250\\
+\texttt{(tri1|corbin2)@umbc.edu}}
+\date{October 2009}
 
 \begin{document}
 \maketitle
 
-\section{...}
+\section{Introduction}
+The assignment was to build a distributed solution to the problem of calculating information about a file F.  We had to determine x, y, and z.
 
-\section{...}
+\section{Background}
+Distributed systems do a, b, and c.
+
+\subsection{Hadoop}
+Our system was implemented using Hadoop.  The Hadoop Distributed File System (HDFS) automatically do cool things like spreading files, replication, etc.
+
+\subsection{MapReduce}
+We wrote mapreduce stuff to do this.
+
+\section{Implementation}
+Our average and max, min and such are calculated as such.
 
 \end{document}
