Added section in background (cont)

--- a/docs/Report/Report.tex
+++ b/docs/Report/Report.tex
@@ -16,7 +16,7 @@ Baltimore, MD, 21250\\
 The assignment was to build a distributed solution to the problem of calculating information about a large file F, comprised of double precision floating point values.  ProjectOne will quickly determine the maximum, minimum, average and median values.
 
 \section{Background}
-A distributed system is a processing system where the computation is spread out over a series of systems.  These systems can be controlled in many ways, possibly via a primary tasking node or alternatively in a peer-to-peer tasking scenario.  With the central tasking model you can easily imagine a large task being broken into independent pieces and these tasks being assigned to a plethora of machines all over the network.  Processing redundancy as well as good book-keeping can allow this type of processing to easily restart on a node if it goes down.  If a node is no longer communicating properly (possibly because it is dead) the tasking assigned to it can be shifted to another node.  Therefore the processing is still being handled in a distributed way that is semi-fault tolerant.  As long as the cost of sending the data to be processed is less then the time to process it, this is a good solution to a large problem.  Because of this cost in data passing, not all problems that can be parallelized truly benefit from such systems.  However, for the most part--processing that can be parallelized should be.
+A distributed system is a processing system where the computation is spread out over a series of systems.  These systems can be controlled in many ways, possibly via a primary tasking node or alternatively in a peer-to-peer tasking scenario.  With the central tasking model you can easily imagine a large task being broken into independent pieces and these tasks being assigned to a plethora of machines all over the network.  Processing redundancy as well as good book-keeping can allow this type of processing to easily restart on a node if it goes down.  If a node is no longer communicating properly (possibly because it is dead) the tasking assigned to it can be shifted to another node.  Therefore the processing is still being handled in a distributed way that is semi-fault tolerant.  As long as the cost of sending the data to be processed is less then the time to process it, this is a good solution to a large problem.  Because of this cost in data passing, not all problems that can be parallelized truly benefit from such systems.  However, for the most part--processing that can be parallelized should be.  To aid in taking a problem and solving it in a distributed way there are infrastructures in place that a developer can utilize.  Hadoop is an implementation of a distributed platform, for which a developer can write code that will work in a distributed way with most of the details hidden.  Using a pre-existing platform can save a lot of time and money in developing distributed applications.
 
 \subsection{Hadoop}
 Our system was implemented using Hadoop.  The Hadoop Distributed File System (HDFS) automatically do cool things like spreading files, replication, etc.
