--- a/docs/Report/Report.tex
+++ b/docs/Report/Report.tex
@@ -29,7 +29,7 @@ We first implemented our own import format class that can read in multiple lines
 
 Initially we implemented three sets of map/reducers to solve maxmin, average, and median independently.  This allowed for less frequent type conversions; because the  average mapper needed to output Text--whereas the maximin mapper output DoubleWritables.  Because we get the maximum and the minimum values for free when calculating the average it was decided that this difference was significant enough to combine the mapper.
 
-We implemented two sets of map/reducers for this project.  The first set determines the maximum, minimum,  and average value of the file.  The mapper finds the max/min/avg of the set of numbers it is give and returns each as a key/value pair.  The reduce then finds the max/min/avg out of all these key value pairs.  Since we are able to send multiple rows to the mapper we can find the max/min/avg in one map reduce step.  The average is special in that the output is actually a sum and a count in a specified format for processing by the reducer.
+We implemented two sets of map/reducers for this project.  The first set determines the maximum, minimum,  and average value of the file.  The mapper finds the max/min/avg of the set of numbers it is given and returns each as a key/value pair.  The reducer then finds the max/min/avg out of all these key value pairs.  Since we are able to send multiple rows to the mapper we can find the max/min/avg in one map reduce step.  The average is special in that the output is actually a sum and a count in a specified format for processing by the reducer.
 
 Out final set of map/reducers estimates the median by calculating the median of the medians.  Both our map and reduce functions do this continually reducing the set by finding the median of each 5 elements until there are 5 or less elements left.  It then returns the median of the remaining 5 elements.  This process can be done very fast using map reduce because the input can be broken into as small as 5 element pieces before being processed.  In the worst case this process splits the data by 30/70 percent.  In general it does much better than this because each estimate is less than 2 elements and greater than 2 others.  
 
@@ -37,13 +37,13 @@ Out final set of map/reducers estimates the median by calculating the median of 
 Our jar files is named projects and it contains a proj package with class ProjectOne.  The main class takes in 4 paramaters which are listed below.\\\\
 Hadoop jar projects.jar proj.ProjectOne [type] [file location] [input file] [output folder]\\
 newline type: maxminavg, med\\
- file location: local, hdfs\\
- input file: path to input file\\
- output folder: output folder path (on hadoop, output will be copied to home directory on local node)\\
+file location: local, hdfs\\
+input file: path to input file\\
+output folder: output folder path (on hadoop, output will be copied to home directory on local node)\\
 
 \subsection*{examples}
-Hadoop jar projects.jar proj.ProjectOne maxmin local numbers results\\
- Hadoop jar projects.jar proj.ProjectOne med hdfs numbers results
+Hadoop jar projects.jar proj.ProjectOne maxminavg local numbers results\\
+Hadoop jar projects.jar proj.ProjectOne med hdfs numbers results
 
 
 \section*{Notes}
