added part of a section.

--- a/docs/tech_report/tech_report.tex
+++ b/docs/tech_report/tech_report.tex
@@ -43,6 +43,11 @@ We'll talk about Erlang.
 Here we can talk about early code that we wrote and how the variables changed 
 and had varying effects.
 
+\subsection{Variables}
+
+These are the things you tweak.  How quickly they quit; whether ones that don't 
+know yet can try to bug their peers for information...
+
 \subsection{Epidemic Rumor Spreading}
 
 Mike, you wrote this part.  Can you talk about how changing variables effected
